--- a/src/main/resources/com/example/source_code/hello-view.fxml
+++ b/src/main/resources/com/example/source_code/hello-view.fxml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.source_code.Controller.HelloController">
+   <children>
+      <Pane layoutX="630.0" layoutY="10.0" prefHeight="504.0" prefWidth="757.0" style="-fx-border-color: #000;">
+         <children>
+            <TableView fx:id="tableView" layoutX="368.0" layoutY="10.0" prefHeight="484.0" prefWidth="380.0">
+              <columns>
+                <TableColumn fx:id="colId" prefWidth="140.0" text="TransactionID" />
+                <TableColumn fx:id="colItems" minWidth="0.0" prefWidth="241.5999755859375" text="ItemDescription" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
+      <Pane layoutX="10.0" layoutY="10.0" prefHeight="504.0" prefWidth="610.0" style="-fx-border-color: #000;">
+         <children>
+            <PieChart fx:id="pieChart1" layoutX="10.0" layoutY="10.0" prefHeight="484.0" prefWidth="590.0" />
+         </children>
+      </Pane>
+      <AnchorPane layoutX="10.0" layoutY="526.0" prefHeight="220.0" prefWidth="1380.0" style="-fx-border-color: #000;">
+         <children>
+            <Button fx:id="btnLoadData" layoutX="540.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleLoadData" prefHeight="30.0" prefWidth="170.0" text="Tải dữ liệu bằng file">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
