--- a/src/main/resources/com/example/source_code/hello-view.fxml
+++ b/src/main/resources/com/example/source_code/hello-view.fxml
@@ -3,25 +3,54 @@
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.source_code.Controller.HelloController">
    <children>
       <Pane layoutX="630.0" layoutY="10.0" prefHeight="738.0" prefWidth="758.0" style="-fx-border-color: #000;">
          <children>
-            <TableView fx:id="tableView" layoutX="10.0" layoutY="10.0" prefHeight="494.0" prefWidth="380.0">
+            <TableView fx:id="tableView" layoutX="10.0" layoutY="10.0" prefHeight="360.0" prefWidth="380.0">
               <columns>
                 <TableColumn fx:id="colId" prefWidth="140.0" text="TransactionID" />
                 <TableColumn fx:id="colItems" minWidth="0.0" prefWidth="241.5999755859375" text="ItemDescription" />
               </columns>
             </TableView>
-            <TextArea fx:id="txtData" layoutX="400.0" layoutY="10.0" prefHeight="494.0" prefWidth="348.0" />
+            <Pane layoutX="10.0" layoutY="380.0" prefHeight="106.0" prefWidth="380.0" style="-fx-border-color: #CCCCCC;">
+               <children>
+                  <Label fx:id="labelTransactionItem" layoutX="14.0" layoutY="14.0" text="Transaction item: ">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelTransactionCount" layoutX="14.0" layoutY="43.0" text="Transaction count: ">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelSupportCount" layoutX="14.0" layoutY="72.0" text="Supporst count: ">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <ScrollPane fx:id="scrollPane" layoutX="400.0" layoutY="10.0" prefHeight="718.0" prefWidth="348.0">
+               <content>
+                  <Pane fx:id="paneDraw" prefHeight="1000.0" prefWidth="4000.0" />
+               </content>
+            </ScrollPane>
+            <ScrollPane fx:id="scrollPane1" layoutX="10.0" layoutY="496.0" prefHeight="232.0" prefWidth="380.0">
+               <content>
+                  <TextFlow fx:id="textFlow" prefWidth="368.0" style="-fx-border-color: #CCCCCC;" />
+               </content>
+            </ScrollPane>
          </children>
       </Pane>
       <Pane layoutX="10.0" layoutY="10.0" prefHeight="504.0" prefWidth="610.0" style="-fx-border-color: #000;">
@@ -36,12 +65,12 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="btnDataMining" layoutX="14.0" layoutY="122.0" mnemonicParsing="false" onAction="#dataMining" prefHeight="44.0" prefWidth="122.0" text="Khai thác">
+            <Button layoutX="14.0" layoutY="122.0" mnemonicParsing="false" onAction="#dataMining" prefHeight="44.0" prefWidth="122.0" text="Khai thác">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Pane layoutX="318.0" layoutY="119.0" prefHeight="89.0" prefWidth="282.0" style="-fx-border-color: #CCCCCC;">
+            <Pane layoutX="318.0" layoutY="10.0" prefHeight="89.0" prefWidth="282.0" style="-fx-border-color: #CCCCCC;">
                <children>
                   <Slider fx:id="slider" layoutX="8.0" layoutY="46.0" prefHeight="14.0" prefWidth="267.0" />
                   <Label fx:id="labelMinSup" layoutX="14.0" layoutY="14.0" text="Min-Supporst: ">
@@ -51,6 +80,11 @@
                   </Label>
                </children>
             </Pane>
+            <Button fx:id="btnDelete" layoutX="425.0" layoutY="175.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="170.0" text="Xóa toàn bộ dữ liệu" textFill="RED">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
