--- a/src/main/resources/com/example/source_code/hello-view.fxml
+++ b/src/main/resources/com/example/source_code/hello-view.fxml
@@ -60,31 +60,47 @@
       </Pane>
       <AnchorPane layoutX="10.0" layoutY="526.0" prefHeight="220.0" prefWidth="610.0" style="-fx-border-color: #000;">
          <children>
-            <Button fx:id="btnLoadData" layoutX="14.0" layoutY="175.0" mnemonicParsing="false" onAction="#handleLoadData" prefHeight="30.0" prefWidth="170.0" text="Tải dữ liệu từ file">
+            <Button fx:id="btnLoadData" layoutX="10.0" layoutY="140.0" mnemonicParsing="false" onAction="#handleLoadData" prefHeight="30.0" prefWidth="170.0" text="Tải dữ liệu từ file">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Button>
-            <Button layoutX="14.0" layoutY="122.0" mnemonicParsing="false" onAction="#dataMining" prefHeight="44.0" prefWidth="122.0" text="Khai thác">
+            <Button layoutX="10.0" layoutY="92.0" mnemonicParsing="false" onAction="#dataMining" prefHeight="40.0" prefWidth="122.0" text="Khai thác">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Pane layoutX="318.0" layoutY="10.0" prefHeight="89.0" prefWidth="282.0" style="-fx-border-color: #CCCCCC;">
+            <Pane layoutX="318.0" layoutY="10.0" prefHeight="180.0" prefWidth="282.0" style="-fx-border-color: #CCCCCC;">
                <children>
-                  <Slider fx:id="slider" layoutX="8.0" layoutY="46.0" prefHeight="14.0" prefWidth="267.0" />
-                  <Label fx:id="labelMinSup" layoutX="14.0" layoutY="14.0" text="Min-Supporst: ">
+                  <Slider fx:id="slider1" layoutX="8.0" layoutY="55.0" prefHeight="14.0" prefWidth="267.0" />
+                  <Label fx:id="labelMinConfidence" layoutX="14.0" layoutY="20.0" text="Min-Confidence:">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Slider fx:id="slider2" layoutX="8.0" layoutY="135.0" prefHeight="14.0" prefWidth="267.0" />
+                  <Label fx:id="labelLift" layoutX="14.0" layoutY="100.0" text="Lift:">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <Button fx:id="btnDelete" layoutX="425.0" layoutY="175.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="170.0" text="Xóa toàn bộ dữ liệu" textFill="RED">
+            <Button fx:id="btnDelete" layoutX="10.0" layoutY="180.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="170.0" text="Xóa toàn bộ dữ liệu" textFill="RED">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Button>
+            <Pane layoutX="10.0" layoutY="10.0" prefHeight="74.0" prefWidth="299.0" style="-fx-border-color: #CCCCCC;">
+               <children>
+                  <Slider fx:id="slider" layoutX="8.0" layoutY="36.0" prefHeight="14.0" prefWidth="267.0" />
+                  <Label fx:id="labelMinSup" layoutX="14.0" layoutY="9.0" text="Min-Supporst: ">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
          </children>
       </AnchorPane>
    </children>
